--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<script src="components/jquery/dist/jquery.js"></script>
 	<script src="components/angular/angular.js"></script>
 	<script src="components/angular-route/angular-route.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
 	<script src="js/main.js">></script>
 	<script src="js/app.js">></script>
 	<script src="js/controllers.js">></script>
