--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Band Website</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	<title>AeSect are a modern influenced metal band based in Dublin, Ireland.</title>
 	<!--build:css css/styles.min.css-->
-	<link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" href="components/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<!--endbuild-->
 </head>
@@ -19,9 +19,9 @@
 	<div footer></div>
 
 	<!--build:js js/main.min.js -->
-	<script src="components/jquery/dist/jquery.js"></script>
-	<script src="components/angular/angular.js"></script>
-	<script src="components/angular-route/angular-route.js"></script>
+	<script src="components/jquery/dist/jquery.min.js"></script>
+	<script src="components/angular/angular.min.js"></script>
+	<script src="components/angular-route/angular-route.min.js"></script>
 	<script src="components/angular-messages/angular-messages.min.js"></script>
 	<script src="js/main.js">></script>
 	<script src="js/app.js">></script>
