--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 	<!--build:js js/main.min.js -->
 	<script src="components/jquery/dist/jquery.min.js"></script>
+	<script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="components/angular/angular.min.js"></script>
 	<script src="components/angular-route/angular-route.min.js"></script>
 	<script src="components/angular-messages/angular-messages.min.js"></script>
